feat: added rifle

--- a/Config/Tags/FPSCore.ini
+++ b/Config/Tags/FPSCore.ini
@@ -3,6 +3,7 @@ GameplayTagList=(Tag="Ability.Type.Action.TogglePerspective",DevComment="")
 GameplayTagList=(Tag="Cosmetic.Perspective.FPP",DevComment="")
 GameplayTagList=(Tag="Event.Movement.Sprint",DevComment="")
 GameplayTagList=(Tag="GameplayCue.FPSCore.Weapon.Pistol.Fire",DevComment="")
+GameplayTagList=(Tag="GameplayCue.FPSCore.Weapon.Rifle.Fire",DevComment="")
 GameplayTagList=(Tag="InputTag.Ability.QuickMelee",DevComment="")
 GameplayTagList=(Tag="InputTag.Ability.TogglePerspective",DevComment="")
 
