--- a/Config/Tags/FPSCore.ini
+++ b/Config/Tags/FPSCore.ini
@@ -5,6 +5,7 @@ GameplayTagList=(Tag="Event.Movement.Sprint",DevComment="")
 GameplayTagList=(Tag="GameplayCue.FPSCore.Interact.WeaponPickup",DevComment="")
 GameplayTagList=(Tag="GameplayCue.FPSCore.Weapon.Pistol.Fire",DevComment="")
 GameplayTagList=(Tag="GameplayCue.FPSCore.Weapon.Rifle.Fire",DevComment="")
+GameplayTagList=(Tag="GameplayCue.FPSCore.Weapon.Shotgun.Fire",DevComment="")
 GameplayTagList=(Tag="InputTag.Ability.QuickMelee",DevComment="")
 GameplayTagList=(Tag="InputTag.Ability.TogglePerspective",DevComment="")
 
