fix: fixed fp anim instance not binding gameplay tag

--- a/Config/Tags/FPSCore.ini
+++ b/Config/Tags/FPSCore.ini
@@ -1,4 +1,5 @@
 [/Script/GameplayTags.GameplayTagsList]
+GameplayTagList=(Tag="Ability.Type.Action.Sprint",DevComment="")
 GameplayTagList=(Tag="Ability.Type.Action.TogglePerspective",DevComment="")
 GameplayTagList=(Tag="Cosmetic.Perspective.FPP",DevComment="")
 GameplayTagList=(Tag="Event.Movement.Sprint",DevComment="")
@@ -8,4 +9,5 @@ GameplayTagList=(Tag="GameplayCue.FPSCore.Weapon.Rifle.Fire",DevComment="")
 GameplayTagList=(Tag="GameplayCue.FPSCore.Weapon.Shotgun.Fire",DevComment="")
 GameplayTagList=(Tag="InputTag.Ability.QuickMelee",DevComment="")
 GameplayTagList=(Tag="InputTag.Ability.TogglePerspective",DevComment="")
+GameplayTagList=(Tag="InputTag.Sprint",DevComment="")
 
