bug: trace is not activated

--- a/Config/Tags/FPSCore.ini
+++ b/Config/Tags/FPSCore.ini
@@ -2,6 +2,7 @@
 GameplayTagList=(Tag="Ability.Type.Action.CrouchSlide",DevComment="")
 GameplayTagList=(Tag="Ability.Type.Action.Sprint",DevComment="")
 GameplayTagList=(Tag="Ability.Type.Action.TogglePerspective",DevComment="")
+GameplayTagList=(Tag="Ability.Type.Action.WeaponPrimary",DevComment="")
 GameplayTagList=(Tag="Cosmetic.Perspective.FPP",DevComment="")
 GameplayTagList=(Tag="Event.Movement.Slide",DevComment="")
 GameplayTagList=(Tag="Event.Movement.Sprint",DevComment="")
@@ -13,4 +14,5 @@ GameplayTagList=(Tag="InputTag.Ability.CrouchSlide",DevComment="")
 GameplayTagList=(Tag="InputTag.Ability.QuickMelee",DevComment="")
 GameplayTagList=(Tag="InputTag.Ability.TogglePerspective",DevComment="")
 GameplayTagList=(Tag="InputTag.Sprint",DevComment="")
+GameplayTagList=(Tag="InputTag.Weapon.Primary",DevComment="")
 
