feat: added user interface for TDM

--- a/Config/Tags/FPSCore.ini
+++ b/Config/Tags/FPSCore.ini
@@ -9,7 +9,16 @@ GameplayTagList=(Tag="Event.Movement.MeleeCombo",DevComment="")
 GameplayTagList=(Tag="Event.Movement.QuickMelee",DevComment="")
 GameplayTagList=(Tag="Event.Movement.Slide",DevComment="")
 GameplayTagList=(Tag="Event.Movement.Sprint",DevComment="")
+GameplayTagList=(Tag="FPSCore.GamePhase.MatchBeginCountdown",DevComment="")
+GameplayTagList=(Tag="FPSCore.GamePhase.Playing",DevComment="")
+GameplayTagList=(Tag="FPSCore.GamePhase.PostGame",DevComment="")
+GameplayTagList=(Tag="FPSCore.GamePhase.Warmup",DevComment="")
+GameplayTagList=(Tag="FPSCore.Score.Assists",DevComment="")
+GameplayTagList=(Tag="FPSCore.Score.Deaths",DevComment="")
+GameplayTagList=(Tag="FPSCore.Score.Eliminations",DevComment="")
 GameplayTagList=(Tag="GameplayCue.FPSCore.Interact.WeaponPickup",DevComment="")
+GameplayTagList=(Tag="GameplayCue.FPSCore.UserMessage.MatchDecided",DevComment="")
+GameplayTagList=(Tag="GameplayCue.FPSCore.UserMessage.WaitingForPlayers",DevComment="")
 GameplayTagList=(Tag="GameplayCue.FPSCore.Weapon.Pistol.Fire",DevComment="")
 GameplayTagList=(Tag="GameplayCue.FPSCore.Weapon.Rifle.Fire",DevComment="")
 GameplayTagList=(Tag="GameplayCue.FPSCore.Weapon.Shotgun.Fire",DevComment="")
