feat: add elimination experience but still broken

--- a/Config/Tags/FPSCore.ini
+++ b/Config/Tags/FPSCore.ini
@@ -25,8 +25,18 @@ GameplayTagList=(Tag="GameplayCue.FPSCore.Weapon.Shotgun.Fire",DevComment="")
 GameplayTagList=(Tag="GameplayEvent.ComboIncrement",DevComment="")
 GameplayTagList=(Tag="GameplayEvent.ComboReset",DevComment="")
 GameplayTagList=(Tag="InputTag.Ability.CrouchSlide",DevComment="")
+GameplayTagList=(Tag="InputTag.Ability.FPSShowLeaderboard",DevComment="")
 GameplayTagList=(Tag="InputTag.Ability.QuickMelee",DevComment="")
 GameplayTagList=(Tag="InputTag.Ability.TogglePerspective",DevComment="")
 GameplayTagList=(Tag="InputTag.Sprint",DevComment="")
 GameplayTagList=(Tag="InputTag.Weapon.Primary",DevComment="")
+GameplayTagList=(Tag="Lyra.FPS.Accolade.EliminationChain",DevComment="")
+GameplayTagList=(Tag="Lyra.FPS.Accolade.EliminationChain.2x",DevComment="")
+GameplayTagList=(Tag="Lyra.FPS.Accolade.EliminationChain.3x",DevComment="")
+GameplayTagList=(Tag="Lyra.FPS.Accolade.EliminationChain.4x",DevComment="")
+GameplayTagList=(Tag="Lyra.FPS.Accolade.EliminationStreak",DevComment="")
+GameplayTagList=(Tag="Lyra.FPS.Accolade.EliminationStreak.5",DevComment="")
+GameplayTagList=(Tag="Lyra.FPS.Accolade.EliminationStreak.10",DevComment="")
+GameplayTagList=(Tag="Lyra.FPS.Accolade.EliminationStreak.15",DevComment="")
+GameplayTagList=(Tag="Lyra.FPS.Accolade.EliminationStreak.20",DevComment="")
 
